App now contains menu button(cleanse and settings). Fix misc. bugs, including: - Empty view loads before data - Other small glitches due to super() calls being called early
Signed-off-by: LeonZong <noelstriangle@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="proceed">Proceed?</string>
     <string name="yes">Yes</string>
     <string name="there_are_no_teams">There are no teams.</string>
+    <string name="delete_all">Delete All</string>
+    <string name="settings">Settings</string>
+    <string name="do_delete">Deleting all the teams will delete all the teams. Maybe export before you do this? Understand?</string>
+    <string name="delete_header">Delete Teams</string>
+    <string name="no">No</string>
 </resources>
