--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,13 @@
     <string name="proceed">Proceed?</string>
     <string name="yes">Yes</string>
     <string name="there_are_no_teams">There are no teams.</string>
-    <string name="delete_all">Delete All</string>
+    <string name="delete_all_teams">Delete All Teams</string>
+    <string name="delete_all_matches">Delete All Matches</string>
     <string name="settings">Settings</string>
-    <string name="do_delete">Deleting all the teams will delete all the teams. Maybe export before you do this? Understand?</string>
+    <string name="do_delete">Deleting all the teams will delete all the teams. Maybe export before you do this? Proceed?</string>
+    <string name="do_delete2">Deleting all the matches will, indeed, delete all the teams. Maybe export before you do this? Proceed?</string>
     <string name="delete_header">Delete Teams</string>
+    <string name="delete_matches">Delete Matches</string>
     <string name="no">No</string>
     <string name="question_land">Can land?</string>
     <string name="question_sample">Can sample?</string>
