App now analyses. We use a tflite model, trained on toa data, to calculate a general win/loss based on team's data. Right now, we only use their scouted data but we will implement match data into the algorithm soon. Seeya, merk
Signed-off-by: LeonZong <noelstriangle@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,7 @@
     <string name="blue_team_1">Blue Team 1</string>
     <string name="blue_team_2">Blue Team 2</string>
     <string name="add_1_pleasae">Please add at least 4 teams.</string>
+    <string name="done_adding_data_begin_analysis">Done adding Data? Begin Analysis</string>
+    <string name="add_some_teams">Please add some teams!</string>
+    <string name="ff">API level is not high enough to sort!</string>
 </resources>
